# coupler

./: Cargo.toml
examples/gain/format/vst3/src/: lib.rs
examples/gain/src/: lib.rs
src/format/: mod.rs
src/format/clap/: factory.rs  gui.rs  instance.rs  mod.rs
