[package]
name = "coupler"
version = "0.1.0"
authors = ["Micah Johnston <micah@photophore.systems>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
coupler-derive = { path = "coupler-derive", optional = true }
clack-plugin = { workspace = true }
clack-extensions = { workspace = true, features = ["audio-ports", "note-ports", "audio-ports-config", "params", "state", "gui", "clack-plugin"] }
# vst3 = "0.1.1"

[features]
derive = ["coupler-derive"]

[workspace]
members = [
    "cargo-coupler",
    "coupler-derive",
    "examples/*",
    "examples/*/format/*",
]

[workspace.dependencies]
coupler = { path = "." }
clack-plugin = { git = "https://github.com/prokopyl/clack", rev = '03489c68ad14e8cc7fe3bdba6b9e847ffb77ceeb' }
clack-extensions = { git = "https://github.com/prokopyl/clack", rev = '03489c68ad14e8cc7fe3bdba6b9e847ffb77ceeb' }